improvement: uke/pit: added form option to enable/disable network loop detection

--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -1998,7 +1998,21 @@
 			</td>
 			<td>
 				<input type="checkbox" name="customernetdevices" form="uke-pit"
-					id="uke-pit-customernetdevices" value="1">
+					id="uke-pit-customernetdevices" value="1" checked>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				{icon name="reload" class="fa-fw"}
+			</td>
+			<td class="nobr">
+				<label for="uke-pit-detect-loops">
+					<strong>{trans("<!uke-pit>Detect network loops")}</strong>
+				</label>
+			</td>
+			<td>
+				<input type="checkbox" name="detectloops" form="uke-pit"
+					   id="uke-pit-detect-loops" value="1" checked>
 			</td>
 		</tr>
 		<tr>
