--- a/templates/default/netdev/netdevconnbox.html
+++ b/templates/default/netdev/netdevconnbox.html
@@ -296,6 +296,7 @@
 		xjx.$('connboxdstradiosector').style.display = (linktype == 1 ? '' : 'none');
 
 		$('[name="linecount"]').prop('disabled', linktype != {$smarty.const.LINKTYPE_FIBER});
+		$('[name="routetype"]').prop('disabled', linktype == {$smarty.const.LINKTYPE_WIRELESS});
 
 		if (linktype == {$smarty.const.LINKTYPE_WIRELESS}) {
 			var selected = xjx.$('srcnetdev').selectedIndex;
