improvement: uke/pit: renamed 'include customer network device assignments' to 'customer network resources as operator resources' with oposite meaning

--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -1992,13 +1992,13 @@
 				{icon name="netdevice" class="fa-fw"}
 			</td>
 			<td class="nobr">
-				<label for="uke-pit-customernetdevices">
-					<strong>{trans("Include customer network device assignments")}</strong>
+				<label for="uke-pit-customer-resources-as-operator-resources">
+					<strong>{trans("<!uke-pit>Customer network resources as operator resources")}</strong>
 				</label>
 			</td>
 			<td>
-				<input type="checkbox" name="customernetdevices" form="uke-pit"
-					id="uke-pit-customernetdevices" value="1" checked>
+				<input type="checkbox" name="customer-resources-as-operator-resources" form="uke-pit"
+					id="uke-pit-customer-resources-as-operator-resources" value="1">
 			</td>
 		</tr>
 		<tr>
