enhancement: uke/pit: optional TERYT, GPS and location building validation

--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -2003,6 +2003,48 @@
 		</tr>
 		<tr>
 			<td>
+				{icon name="location" class="fa-fw"}
+			</td>
+			<td class="nobr">
+				<label for="uke-pit-validate-teryt">
+					<strong>{trans("<!uke-pit>Validate TERYT properties")}</strong>
+				</label>
+			</td>
+			<td>
+				<input type="checkbox" name="validate-teryt" form="uke-pit"
+					id="uke-pit-validate-teryt" value="1" checked>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				{icon name="location" class="fa-fw"}
+			</td>
+			<td class="nobr">
+				<label for="uke-pit-validate-building-number">
+					<strong>{trans("<!uke-pit>Validate building number")}</strong>
+				</label>
+			</td>
+			<td>
+				<input type="checkbox" name="validate-building-number" form="uke-pit"
+					   id="uke-pit-validate-building-number" value="1" checked>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				{icon name="location" class="fa-fw"}
+			</td>
+			<td class="nobr">
+				<label for="uke-pit-validate-gps">
+					<strong>{trans("<!uke-pit>Validate GPS coordinates")}</strong>
+				</label>
+			</td>
+			<td>
+				<input type="checkbox" name="validate-gps" form="uke-pit"
+					id="uke-pit-validate-gps" value="1" checked>
+			</td>
+		</tr>
+		<tr>
+			<td>
 				{icon name="reload" class="fa-fw"}
 			</td>
 			<td class="nobr">
