enhancement: uke/pit: optional TERYT, GPS and location building validation

--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -2020,13 +2020,13 @@
 				{icon name="location" class="fa-fw"}
 			</td>
 			<td class="nobr">
-				<label for="uke-pit-validate-building-number">
-					<strong>{trans("<!uke-pit>Validate building number")}</strong>
+				<label for="uke-pit-validate-building-numbers">
+					<strong>{trans("<!uke-pit>Validate building numbers")}</strong>
 				</label>
 			</td>
 			<td>
-				<input type="checkbox" name="validate-building-number" form="uke-pit"
-					   id="uke-pit-validate-building-number" value="1" checked>
+				<input type="checkbox" name="validate-building-numbers" form="uke-pit"
+					   id="uke-pit-validate-building-numbers" value="1" checked>
 			</td>
 		</tr>
 		<tr>
