--- a/templates/default/customer/customerlist.html
+++ b/templates/default/customer/customerlist.html
@@ -144,6 +144,7 @@
 					<OPTION VALUE="51"{if $filter.state == 51} SELECTED{/if}>{trans("with disconnected nodes")}</OPTION>
 					<OPTION VALUE="64"{if $filter.state == 64} SELECTED{/if}>{trans("with nodes")}</OPTION>
 					<OPTION VALUE="65"{if $filter.state == 65} SELECTED{/if}>{trans("without nodes")}</OPTION>
+					<OPTION VALUE="84"{if $filter.state == 84} SELECTED{/if}>{trans("with all nodes not connected to network device")}</OPTION>
 				</optgroup>
 				<optgroup label="{trans("Contracts")}">
 					<OPTION value="59"{if $filter.state == 59} SELECTED{/if}>{trans("without contracts")}</OPTION>
