devel/cleanup: renamed assignment oriented configuration variables to more elegant names in separate 'assignments' section

--- a/templates/default/customer/customerassignmentsedit.html
+++ b/templates/default/customer/customerassignmentsedit.html
@@ -203,7 +203,7 @@
 			var tariffid = parseInt($('form[name="assignment"] select[name="assignment[tariffid]"]').val());
 			$("#netflag, #grossprice, #netprice, #tax").prop('disabled', false);
 
-			{if ConfigHelper::checkConfig('phpui.node_assignment_warning')}
+			{if ConfigHelper::checkConfig('assignments.missed_node_warning', ConfigHelper::checkConfig('phpui.node_assignment_warning'))}
 			if (isNaN(tariffid)) {
 				document.assignment.submit();
 				return;
