bugfix: fixed locales on invoice product id column title (LMS+ fixes #2247)

--- a/templates/default/invoice/invoice.html
+++ b/templates/default/invoice/invoice.html
@@ -241,7 +241,7 @@
 			</td>
 			{if !$hide_prodid}
 				<td width="1%" class="head" align="center">
-					<strong>{trans("Product ID")}</strong>
+					<strong>{trans("<!invoice>Product ID")}</strong>
 				</td>
 			{/if}
 			{if $show_tax_category}
