--- a/templates/default/invoice/invoice.html
+++ b/templates/default/invoice/invoice.html
@@ -538,11 +538,19 @@
 				<td width="50%" align="left" class="hdf">
 					{if $invoice.rebate}
 						{if $use_alert_color && !$show_balance_summary}<span style="color: red; font-weight: bold;">{/if}
-						{t a=moneyf($invoice.value, $invoice.currency)}Invoice value: $a (to repay){/t}
+						{if $invoice.invoice && $invoice.doctype == $smarty.const.DOC_CNOTE}
+							{t a=moneyf($invoice.value, $invoice.currency)}Correction value: $a (to repay){/t}
+						{else}
+							{t a=moneyf($invoice.value, $invoice.currency)}Invoice value: $a (to repay){/t}
+						{/if}
 						{if $use_alert_color && !$show_balance_summary}</span>{/if}
 					{else}
 						{if $use_alert_color && !$show_balance_summary}<span style="color: red; font-weight: bold;">{/if}
-						{t a=moneyf($invoice.value, $invoice.currency)}Invoice value: $a (to pay){/t}
+						{if $invoice.invoice && $invoice.doctype == $smarty.const.DOC_CNOTE}
+							{t a=moneyf($invoice.value, $invoice.currency)}Correction value: $a (to pay){/t}
+						{else}
+							{t a=moneyf($invoice.value, $invoice.currency)}Invoice value: $a (to pay){/t}
+						{/if}
 						{if $use_alert_color && !$show_balance_summary}</span>{/if}
 					{/if}
 				</td>
