--- a/templates/default/customer/customerassignments.html
+++ b/templates/default/customer/customerassignments.html
@@ -251,13 +251,13 @@
 							<div class="lms-ui-tab-table-column base_value">
 								<span class="net">
 									{if $a.tariffid || $a.liabilityid}
-										{moneyf($a.unitary_netvalue, $a.currency, 3)}
+										{Utils::smartFormatMoney($a.unitary_netvalue, $a.currency)}
 									{/if}
 								</span>
 								<span class="net-gross"><br></span>
 								<span class="gross">
 									{if $a.tariffid || $a.liabilityid}
-										{moneyf($a.unitary_value, $a.currency, 3)}
+										{Utils::smartFormatMoney($a.unitary_value, $a.currency)}
 									{/if}
 								</span>
 							</div>
@@ -289,17 +289,17 @@
 											{/if}
 										{elseif $a.vdiscount != 0}
 											{if isset($a.real_unitary_netdiscount)}
-												{moneyf($a.real_unitary_netdiscount, $a.currency, 3)}
+												{Utils::smartFormatMoney($a.real_unitary_netdiscount, $a.currency)}
 												{if $a.count != 1}
 													<span title="{trans("Total net discount")}">
-													({moneyf($a.real_netdiscount, $a.currency, 3)})
-												</span>
+														({Utils::smartFormatMoney($a.real_netdiscount, $a.currency)})
+													</span>
 												{/if}
 											{else}
-												{moneyf($a.unitary_netdiscount, $a.currency, 3)}
+												{Utils::smartFormatMoney($a.unitary_netdiscount, $a.currency)}
 												{if $a.count != 1}
 													<span title="{trans("Total net discount")}">
-															({moneyf($a.unitary_netdiscount *$a.count, $a.currency, 3)})
+														({Utils::smartFormatMoney($a.unitary_netdiscount * $a.count, $a.currency)})
 													</span>
 												{/if}
 											{/if}
@@ -319,18 +319,18 @@
 											{/if}
 										{elseif $a.vdiscount != 0}
 											{if isset($a.real_unitary_discount)}
-												{moneyf($a.real_unitary_discount, $a.currency, 3)}
+												{Utils::smartFormatMoney($a.real_unitary_discount, $a.currency)}
 												{if $a.count != 1}
 													<span title="{trans("Total gross discount")}">
-														({moneyf($a.real_discount, $a.currency, 3)})
+														{Utils::smartFormatMoney($a.real_discount, $a.currency)}
 													</span>
 												{/if}
 											{else}
-												{moneyf($a.unitary_discount, $a.currency, 3)}
+												{Utils::smartFormatMoney($a.unitary_discount, $a.currency)}
 												{if $a.count != 1}
-												<span title="{trans("Total net discount")}">
-														({moneyf($a.unitary_discount *$a.count, $a.currency, 3)})
-												</span>
+													<span title="{trans("Total net discount")}">
+														({Utils::smartFormatMoney($a.unitary_discount * $a.count, $a.currency)})
+													</span>
 												{/if}
 											{/if}
 										{else}
@@ -349,17 +349,17 @@
 							<div class="lms-ui-tab-table-column price">
 								<span class="net">
 									{if isset($a.real_unitary_netprice)}
-										{moneyf($a.real_unitary_netprice, $a.currency, 3)}
+										{Utils::smartFormatMoney($a.real_unitary_netprice, $a.currency)}
 									{else}
-										{moneyf($a.discounted_netprice, $a.currency, 3)}
+										{Utils::smartFormatMoney($a.discounted_netprice, $a.currency)}
 									{/if}
 								</span>
 								<span class="net-gross"><br></span>
 								<span class="gross">
 									{if isset($a.real_unitary_price)}
-										{moneyf($a.real_unitary_price, $a.currency, 3)}
+										{Utils::smartFormatMoney($a.real_unitary_price, $a.currency)}
 									{else}
-										{moneyf(($a.discounted_price), $a.currency, 3)}
+										{Utils::smartFormatMoney($a.discounted_price, $a.currency)}
 									{/if}
 
 								</span>
@@ -367,17 +367,17 @@
 							<div class="lms-ui-tab-table-column total">
 								<span class="net">
 									{if isset($a.real_disc_netvalue)}
-										{moneyf($a.real_disc_netvalue, $a.currency)}
+										{Utils::formatMoney($a.real_disc_netvalue, $a.currency)}
 									{else}
-										{moneyf($a.discounted_netvalue, $a.currency)}
+										{Utils::formatMoney($a.discounted_netvalue, $a.currency)}
 									{/if}
 								</span>
 								<span class="net-gross"><br></span>
 								<span class="gross">
 									{if isset($a.real_disc_value)}
-										{moneyf($a.real_disc_value, $a.currency)}
+										{Utils::formatMoney($a.real_disc_value, $a.currency)}
 									{else}
-										{moneyf($a.discounted_value, $a.currency)}
+										{Utils::formatMoney($a.discounted_value, $a.currency)}
 									{/if}
 								</span>
 							</div>
