--- a/templates/default/customer/customeredit.html
+++ b/templates/default/customer/customeredit.html
@@ -7,6 +7,9 @@
 {block name="customereditbox"}
 	{include file="customer/customereditbox.html"}
 {/block}
+{block name="customerextids"}
+	{include file="customer/customerextids.html"}
+{/block}
 {block name="customernotes"}
 	{include file="customer/customernotes.html" limit=10}
 {/block}
