enhancement: uke/pit: implemented new report type which export only 'ua' sheet data in csv format

--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -1975,6 +1975,26 @@
 	<tbody>
 		<tr>
 			<td>
+				{icon name="configuration" class="fa-fw"}
+			</td>
+			<td class="nobr">
+				<strong>{trans("<!uke-pit>Report type")}</strong>
+			</td>
+			<td>
+				<label>
+					<input type="radio" name="report-type" form="uke-pit"
+						value="full" checked>
+					{trans("<!uke-pit>full")}
+				</label>
+				<label>
+					<input type="radio" name="report-type" form="uke-pit"
+						value="customer-services">
+					{trans("<!uke-pit>customer services")}
+				</label>
+			</td>
+		</tr>
+		<tr>
+			<td>
 				{icon name="summary" class="fa-fw"}
 			</td>
 			<td class="nobr">
